--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-devtools": "^4.24.7",
     "react-native": "0.68.0",
+    "react-native-currency-input": "^1.0.1",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-modalize": "^2.0.13",
     "react-native-reanimated": "^2.6.0",
